--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -1,8 +1,9 @@
-<section>
-  <h2 class="visually-hidden">Gallery</h2>
-  <div class="swiper">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
+<section class="gallery">
+  <div class="container">
+    <h2 class="visually-hidden">Gallery</h2>
+    <div class="swiper-gallary">
+      <!-- <div class="swiper-wrapper"> -->
+      <div>
         <picture>
           <source
             srcset="
@@ -32,7 +33,7 @@
           />
         </picture>
       </div>
-      <div class="swiper-slide">
+      <div>
         <picture>
           <source
             srcset="
@@ -62,7 +63,7 @@
           />
         </picture>
       </div>
-      <div class="swiper-slide">
+      <div>
         <picture>
           <source
             srcset="
@@ -92,6 +93,7 @@
           />
         </picture>
       </div>
+      <!-- </div> -->
     </div>
   </div>
 </section>
