--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -6,6 +6,13 @@
   text-transform: uppercase;
   color: $white-text-color;
   margin-bottom: 12px;
+  @include tablet {
+    @include font(800, 22px, 1.22, 0.04em);
+  }
+  @include desktop {
+    font-size: 30px;
+    line-height: 1.23px;
+  }
 }
 .about-title {
   font-family: $secondary-ff;
@@ -18,6 +25,24 @@
   text-transform: uppercase;
   color: $white-text-color;
   margin-bottom: 32px;
+  @include tablet {
+    max-width: 454px;
+    font-size: 34px;
+    letter-spacing: 0.06em;
+    margin-bottom: 72px;
+  }
+  @include desktop {
+    max-width: 481px;
+    font-size: 36px;
+    line-height: 1.25;
+    margin-bottom: 82px;
+  }
+}
+.about-content {
+  @include tablet {
+    display: flex;
+    gap: 32px;
+  }
 }
 .about-picture {
   position: relative;
@@ -31,32 +56,64 @@
       rgba(248, 210, 78, 0.7)
     ),
     #d9d9d9;
-  box-shadow: 0px 4.48583px 16.8218px rgba(153, 114, 23, 0.25);
   border-radius: 50%;
   background-repeat: no-repeat;
   margin-bottom: 62px;
+  @include tablet {
+    max-width: 334px;
+    height: 334px;
+    margin-bottom: 0;
+    @include desktop {
+      width: 500px;
+      height: 500px;
+    }
+  }
 }
 .about-cow {
   position: absolute;
   width: 100%;
   transform: translateY(22px);
+  @include tablet {
+    transform: translateY(26px);
+  }
+  @include desktop {
+    transform: translateY(39px);
+  }
+}
+.abot-text-container {
+  max-width: 334px;
 }
 .about-item {
   @include font(400, 12px, 1.75, 0.04em);
-  margin-left: auto;
-  margin-right: auto;
   text-align: center;
   color: $white-text-color;
+  @include desktop {
+    font-size: 16px;
+  }
 }
 .about-list:not(:last-child) {
   margin-bottom: 4px;
+  @include tablet {
+    margin-bottom: 8px;
+  }
 }
 .about-item:last-child {
   display: none;
+  @include tablet {
+    display: block;
+  }
 }
 .about-button {
   margin-top: 20px;
   margin-bottom: 42px;
   margin-left: auto;
   margin-right: auto;
+  gap: 5px;
+  stroke: currentColor;
+}
+.about-more {
+  stroke: currentColor;
+  &:focus {
+    stroke: currentColor;
+  }
 }
