header/almost done

--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
             ./images/header/logo-desktop-1x.png 1x,
             ./images/header/logo-desktop-2x.png 2x
           "
-          media="(min-width:1200px"
+          media="(min-width:1200px)"
         />
 
         <source
@@ -26,7 +26,7 @@
         />
         <img
           src="./images/header/logo-desktop-1x.png"
-          alt="Зображення морозива"
+          alt="морозиво"
           width="60"
           ;
           height="65"
@@ -37,16 +37,16 @@
     <nav class="nav">
       <ul class="list">
         <li class="item">
-          <a href="./index.html" class="link">Home</a>
+          <a href="#header" class="link">Home</a>
         </li>
         <li class="item">
-          <a href="" class="link">How it’s made?</a>
+          <a href="#about" class="link">How it’s made?</a>
         </li>
         <li class="item">
-          <a href="" class="link">Our products</a>
+          <a href="#products" class="link">Our products</a>
         </li>
         <li class="item">
-          <a href="" class="link">Contact</a>
+          <a href="#contact" class="link">Contact</a>
         </li>
       </ul>
     </nav>
