--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -39,7 +39,7 @@ background-color: $main-bg-color;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.3;
-    cursor: url ("./images/header/icon.svg#icon-cursor"), auto;
+    cursor: pointer;
 
     
     color: $white-text-color;
