--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,10 +1,10 @@
 <footer class="footer"> 
-    <div class="container">
+    <div class="container box">
 <div class="title">
 <p class="text__made">homemade ice cream made </p>
 <p class="text__passion">with passion</p>
 </div>
-<div>
+<div class="contact-soc">
 <ul class="soc list">
     <li class="soc__item">
         <a href="https://github.com/" rel="noopener noreferrer nofollow" class="soc__link">
@@ -35,8 +35,9 @@
         +61 (0) 383 766 284</a>
 </p>
 </div>
+</div>
 <div class="license-box">
 <p class="license">© 2022 - IceCream. All Rights Reserved</p>
 </div>
-</div>
+
 </footer>
