--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -7,7 +7,7 @@
             ./images/header/logo-desktop-1x.png 1x,
             ./images/header/logo-desktop-2x.png 2x
           "
-          media="(min-width:1200px"
+          media="(min-width:1200px)"
         />
 
         <source
