--- a/src/sass/_modal.scss
+++ b/src/sass/_modal.scss
@@ -1,7 +1,6 @@
 // TEST BUTTONS STYLES
 
 .test-buttons {
-  // width: 1200px;
   z-index: 200;
   height: 100px;
   display: grid;
@@ -37,29 +36,6 @@
   z-index: 20;
   transition: 0.3s all;
   overflow-y: scroll;
-
-  // display: flex;
-  // align-items: center;
-  // justify-content: center;
-  // flex-direction: column;
-}
-
-.modal__all-modals-container {
-  //   pointer-events: none;
-  overflow-y: scroll;
-  position: fixed;
-  // z-index: -1;
-  // opacity: 0;
-  // visibility: hidden;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  //   display: flex;
-  //   align-items: center;
-  //   justify-content: center;
-  //   flex-direction: column;
 }
 
 // --------------- MODAL STYLES ------------------------
@@ -68,18 +44,9 @@
   opacity: 1;
   visibility: hidden;
 
-  // z-index must be greater than overlay
   z-index: 21;
 
-  // modal styles
-
   position: fixed;
-
-  // margin-top: 15%;
-
-  // top: 50%;
-  // left: 50%;
-  // transform: translate(-50%, -50%);
 
   width: 100%;
   max-width: 280px;
@@ -104,11 +71,6 @@
   opacity: 1;
   visibility: visible;
 }
-
-// .modal.active {
-//   @media screen and {
-//   }
-// }
 
 .modal__title {
   font-family: $secondary-ff;
@@ -309,8 +271,6 @@
 }
 
 .modal__input-label {
-  // margin: 0 auto;
-
   max-width: 100%;
   @media screen and (min-width: 758px) {
     width: 368px;
@@ -396,6 +356,14 @@
 
     color: $black-text-color;
   }
+  #vimeo-player {
+    border-radius: 10px;
+    outline: 3px solid $black-text-color;
+
+    &:hover {
+      outline: 3px solid $hover-green-color;
+    }
+  }
 
   .modal__about-us-video-zone {
     display: flex;
@@ -405,7 +373,6 @@
     height: 200px;
     width: 100%;
 
-    background-color: $black-text-color;
     margin-bottom: 20px;
     border: 0px;
     border-radius: 10px;
@@ -638,7 +605,6 @@
 .hover-underline-animation {
   display: inline-block;
   position: relative;
-  // color: $black-text-color;
 }
 
 .hover-underline-animation:after {
