--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -9,7 +9,7 @@
 @import './hero';
 @import './products';
 @import './about';
-// @import './advantages';
+@import './advantages';
 @import './gallery';
 @import './reviews';
 @import './contacts';
