--- a/src/sass/_products.scss
+++ b/src/sass/_products.scss
@@ -86,6 +86,8 @@
 
 	.card-img {
 		position: relative;
+		display: flex;
+		/*position: relative;*/
 		z-index: 2;
 		border-radius: 50%;
 		width: 200.33px;
@@ -97,6 +99,8 @@
 
 	.products__circle {
 		z-index: 1;
+		position: absolute;
+		display: flex;
 		position: absolute;
 		width: 200.33px;
 		height: 199.68px;
@@ -200,27 +204,385 @@
 	}
 }
 
+
+
 @media screen and (min-width:768px) {
 	.section.products {
 		background-color: #fff;
 		background-image: url("../images/products/tablet/backgroung-tablet.svg");
 	}
 
+	.products__pre-title {
+		@include font(800, 22px, 1.22, null);
+		color: $black-text-color;
+		text-align: center;
+		text-transform: uppercase;
+		align-items: center;
+		margin-bottom: 12px;
+	}
+
+	.products__title {
+		@include font(400, 34px, 1.8, 0.04em);
+		color: $black-text-color;
+		text-align: center;
+		text-transform: uppercase;
+		margin-bottom: 148px;
+
+	}
+
 	.products__cards {
+		display: flex;
+		flex-wrap: wrap;
+		gap: 15px;
+		justify-content: center;
+
+	}
+
+
+	.products__card {
+		position: relative;
+		width: 224px;
+		height: 428px;
+		border-radius: 15.78px;
+		display: flex;
+		justify-content: center;
+		/*flex-basis: calc((100% - 30px)/3);*/
+	}
+
+	.products__card:not(:last-child) {
+		margin-bottom: 0px;
+	}
+
+	.products__card--ice-cream {
+		background-color: #AEC6A5;
+	}
+
+
+	.products__card--ice-coffee {
+		background-color: #EFD478;
+	}
+
+	.products__card--milkshakes {
+		background: #D6936D;
+	}
+
+	.card__item {
+		position: absolute;
+		text-align: center;
 		align-items: center;
 		display: flex;
-		flex-direction: row;
-		position: relative;
-		gap: 30px;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 0px 32px;
+		top: 130px;
+		bottom: 20px;
+
 	}
 
 
 
+	.card-img {
+		position: relative;
+		z-index: 2;
+		border-radius: 50%;
+		width: 199.34px;
+		height: 196.85px;
+		transform: translateY(-50%);
+		align-items: center;
+
+	}
+
+	.products__circle {
+		z-index: 1;
+		position: absolute;
+		width: 199.34px;
+		height: 196.85px;
+		padding: 0px 40px;
+		top: 11.32px;
+		align-items: center;
+		border-radius: 50%;
+		transform: translateY(-50%);
+		margin-bottom: 18.75px;
+
+
+		&.products__circle--icecream {
+
+			background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+			box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+		}
+
+
+		&.products__circle--icecoffee {
+			background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+			box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+		}
+
+		&.products__circle--milksnakes {
+
+			background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+			box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
+		}
+	}
+
+	.card-img--icecream {
+		align-items: center;
+		justify-content: center;
+		z-index: 2;
+		top: 0px;
+		border-radius: 50%;
+		width: 199.34px;
+		height: 196.85px;
+	}
+
+	.card-img--icecoffe {
+		align-items: center;
+		justify-content: center;
+		z-index: 2;
+		top: 0px;
+		border-radius: 50%;
+		width: 199.34px;
+		height: 196.85px;
+	}
+
+	.card-img--milksnakes {
+		align-items: center;
+		justify-content: center;
+		z-index: 2;
+		top: 0px;
+		border-radius: 50%;
+		width: 199.34px;
+		height: 196.85px;
+	}
+
+	.card__title {
+		@include font(700, 22px, 1.2, 0.04em);
+		color: $black-text-color;
+		text-align: center;
+		text-transform: uppercase;
+	}
+
+	.card__text {
+		font-weight: 400;
+		font-size: 14px;
+		line-height: 1.2;
+		letter-spacing: 00.04em;
+		color: #131313;
+		line-height: 176%;
+		text-align: center;
+	}
+
+	.card__button {
+		background-color: transparent;
+		border: none;
+		color: #131313;
+	}
+
+	.button-icon {
+		background-color: transparent;
+		stroke: currentColor;
+		width: 42px;
+		height: 15px;
+
+
+		&:hover {
+			stroke: currentColor;
+			transform: scale(1.7);
+
+		}
+
+		&:focus {
+			stroke: currentColor;
+			transform: scale(2);
+		}
+	}
 }
+
+
+
+
 
 @media screen and (min-width:1200px) {
 	.section.products {
 		background-color: #fff;
 		background-image: url("../images/products/desktop/background-desctop.svg");
+	}
+
+	.products__title {
+		@include font(400, 36px, 1.25, 0.04em);
+		color: $black-text-color;
+		text-align: center;
+		text-transform: uppercase;
+		margin-bottom: 250px;
+	}
+
+	.products__pre-title {
+		@include font(800, 30px, 1.2, null);
+		color: $black-text-color;
+		text-align: center;
+		text-transform: uppercase;
+		align-items: center;
+		margin-bottom: 12px;
+	}
+
+	.products__cards {
+		display: flex;
+		flex-wrap: nowrap;
+		gap: 33px;
+		justify-content: center;
+
+	}
+
+
+	.products__card {
+		position: relative;
+		width: 370px;
+		height: 535px;
+		border-radius: 24px;
+		display: flex;
+		justify-content: center;
+		flex-basis: calc((100% - 30px) / 3);
+	}
+
+	.products__card--ice-cream {
+		background-color: #AEC6A5;
+	}
+
+
+	.products__card--ice-coffee {
+		background-color: #EFD478;
+	}
+
+	.products__card--milkshakes {
+		background: #D6936D;
+	}
+
+	.card__item {
+		position: absolute;
+		text-align: center;
+		align-items: center;
+		display: flex;
+		flex-direction: column;
+		justify-content: space-between;
+		padding: 0px 63px;
+		top: 180px;
+		bottom: 60px;
+
+	}
+
+
+
+	.card-img {
+		position: relative;
+		z-index: 2;
+		border-radius: 50%;
+		width: 300px;
+		height: 300px;
+		transform: translateY(-55%);
+		align-items: center;
+
+	}
+
+	.products__circle {
+		z-index: 1;
+		position: absolute;
+		width: 300px;
+		height: 300px;
+		padding: 0px 40px;
+		top: 11.32px;
+		align-items: center;
+		border-radius: 50%;
+		transform: translateY(-55%);
+		margin-bottom: 20px;
+
+
+		&.products__circle--icecream {
+
+			background: linear-gradient(0deg, rgba(156, 190, 143, 0.7), rgba(156, 190, 143, 0.7)), #D9D9D9;
+			box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+		}
+
+
+		&.products__circle--icecoffee {
+			background: linear-gradient(0deg, rgba(248, 210, 78, 0.7), rgba(248, 210, 78, 0.7)), #D9D9D9;
+			box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+		}
+
+		&.products__circle--milksnakes {
+
+			background: linear-gradient(0deg, rgba(213, 117, 63, 0.7), rgba(213, 117, 63, 0.7)), #D9D9D9;
+			box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
+		}
+	}
+
+	.card-img--icecream {
+		align-items: center;
+		justify-content: center;
+		z-index: 24;
+		top: 0px;
+		border-radius: 50%;
+		width: 199.34px;
+		height: 196.85px;
+	}
+
+	.card-img--icecoffe {
+		align-items: center;
+		justify-content: center;
+		z-index: 24;
+		top: 0px;
+		border-radius: 50%;
+		width: 199.34px;
+		height: 196.85px;
+	}
+
+	.card-img--milksnakes {
+		align-items: center;
+		justify-content: center;
+		z-index: 24;
+		top: 0px;
+		border-radius: 50%;
+		width: 199.34px;
+		height: 196.85px;
+	}
+
+	.card__title {
+		@include font(700, 30px, 1.23, 0.04em);
+		color: $black-text-color;
+		text-align: center;
+		text-transform: uppercase;
+	}
+
+	.card__text {
+		@include font(400, 16px, 1.2, 0.04em);
+		color: $black-text-color;
+		line-height: 176%;
+		text-align: center;
+	}
+
+	.card__button {
+		background-color: transparent;
+		border: none;
+		color: #131313;
+	}
+
+	.button-icon {
+		background-color: transparent;
+		stroke: currentColor;
+		width: 42px;
+		height: 16px;
+
+
+		&:hover {
+			stroke: currentColor;
+			transform: scale(1.7);
+			/*	width: 52px;
+				height: 16px;*/
+		}
+
+		&:focus {
+			stroke: currentColor;
+			transform: scale(2);
+			/*width: 55px;
+				height: 23px;*/
+		}
 	}
 }
