--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -65,7 +65,11 @@
             Soft ice cream with a delicate taste. Made with milk, cream, sugar
             and natural stabilizer
           </p>
-          <button class="card__button" type="button">
+          <button
+            class="card__button js-open-modal main-button"
+            data-modal="4"
+            type="button"
+          >
             <svg
               class="button-icon"
               width="42"
@@ -142,7 +146,11 @@
             Fragrant invigorating drink created from 100% natural ingredients
             without the use of preservatives and flavor enhancers
           </p>
-          <button class="card__button" type="button">
+          <button
+            class="card__button js-open-modal main-button"
+            data-modal="4"
+            type="button"
+          >
             <svg
               class="button-icon"
               width="40"
@@ -220,7 +228,11 @@
             Sweet drinks based on milk and ice cream, supplemented with syrups,
             fruits, berries and other sweets of your choice
           </p>
-          <button class="card__button" type="button">
+          <button
+            class="card__button js-open-modal main-button"
+            data-modal="4"
+            type="button"
+          >
             <svg
               class="button-icon"
               width="40"
