Added the "up" button to the effect of appearing when scrolling down

--- a/src/sass/_extras.scss
+++ b/src/sass/_extras.scss
@@ -3,6 +3,8 @@
   height: 50px;
   width: auto;
   position: fixed;
+  opacity: 0;
+  visibility: hidden;
   bottom: 20px;
   right: 20px;
   font-family: $secondary-ff;
@@ -15,6 +17,13 @@
   border: 2px solid $black-text-color;
 
   animation: extras__scroll-to-top 1s linear infinite both;
+
+  transition: opacity 1000ms $duratoin, visibility 1000ms $duratoin;
+
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
 }
 
 @keyframes extras__scroll-to-top {
