Update contacts and products

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -26,14 +26,18 @@
             </li>
           </ul>
         </div>
-        <div class="contacts__links">
-          <a href="tel:+610383766284" class="contacts__tel link"
+        <ul class="contacts__links">
+          <li>
+            <a href="tel:+610383766284" class="contacts__tel link"
             >+61(0) 383 766 284
           </a>
-          <a href="mailto:noreply@envato.com" class="contacts__mail link"
+          </li>
+          <li>
+            <a href="mailto:noreply@envato.com" class="contacts__mail link"
             >noreply@envato.com
           </a>
-        </div>
+          </li>
+        </ul>
       </li>
       <li class="contacts__item">
         <div class="contacts__address">
@@ -59,14 +63,18 @@
             </li>
           </ul>
         </div>
-        <div class="contacts__links">
-          <a href="tel:+610383766284" class="contacts__tel link"
+       <ul class="contacts__links">
+          <li>
+            <a href="tel:+610383766284" class="contacts__tel link"
             >+61(0) 383 766 284
           </a>
-          <a href="mailto:noreply@envato.com" class="contacts__mail link"
+          </li>
+          <li>
+            <a href="mailto:noreply@envato.com" class="contacts__mail link"
             >noreply@envato.com
           </a>
-        </div>
+          </li>
+        </ul>
       </li>
       <li class="contacts__item">
         <div class="contacts__address">
@@ -92,14 +100,18 @@
             </li>
           </ul>
         </div>
-        <div class="contacts__links">
-          <a href="tel:+610383766284" class="contacts__tel link"
+        <ul class="contacts__links">
+          <li>
+            <a href="tel:+610383766284" class="contacts__tel link"
             >+61(0) 383 766 284
           </a>
-          <a href="mailto:noreply@envato.com" class="contacts__mail link"
+          </li>
+          <li>
+            <a href="mailto:noreply@envato.com" class="contacts__mail link"
             >noreply@envato.com
           </a>
-        </div>
+          </li>
+        </ul>
       </li>
     </ul>
     <div class="contacts__buttons">
