--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -66,7 +66,7 @@
             Soft ice cream with a delicate taste. Made with milk, cream, sugar
             and natural stabilizer
           </p>
-          <button class="card__button" type="button">
+          <button class="card__button js-open-modal" type="button" data-modal="5">
             <svg
               class="button-icon"
               width="42"
@@ -145,7 +145,7 @@
             Fragrant invigorating drink created from 100% natural ingredients
             without the use of preservatives and flavor enhancers
           </p>
-          <button class="card__button" type="button">
+          <button class="card__button js-open-modal" type="button" data-modal="6">
             <svg
               class="button-icon"
               width="40"
@@ -224,7 +224,7 @@
             Sweet drinks based on milk and ice cream, supplemented with syrups,
             fruits, berries and other sweets of your choice
           </p>
-          <button class="card__button" type="button">
+          <button class="card__button js-open-modal" type="button" data-modal="7">
             <svg
               class="button-icon"
               width="40"
