Fix modal + dotted menu + new BG

--- a/src/partials/modal.html
+++ b/src/partials/modal.html
@@ -242,7 +242,7 @@
   </button>
 
   <div class="modal__container" role="group">
-    <p class="modal__title">Chololate icecream</p>
+    <p class="modal__title">Chololate Ice Cream</p>
 
     <ul class="modal__items">
       <li class="modal__item">
@@ -355,7 +355,7 @@
   </button>
 
   <div class="modal__container" role="group">
-    <p class="modal__title">Chololate ice coffee</p>
+    <p class="modal__title">Chololate Ice Coffee</p>
 
     <ul class="modal__items">
       <li class="modal__item">
@@ -468,18 +468,18 @@
   </button>
 
   <div class="modal__container" role="group">
-    <p class="modal__title">Chololate icecream</p>
+    <p class="modal__title">milkShake</p>
 
     <ul class="modal__items">
       <li class="modal__item">
         <img
           class="modal__img"
           srcset="
-            ./images/modal/modal-buyNow-iceCream.png    1x,
-            ./images/modal/modal-buyNow-iceCream@2x.png 2x
+            ./images/modal/modal-buyNow-milkshake.png    1x,
+            ./images/modal/modal-buyNow-milkshake@2x.png 2x
           "
-          src="./images/modal/modal-buyNow-iceCream.png"
-          alt="ice cream"
+          src="./images/modal/modal-buyNow-milkshake.png"
+          alt="milkshake"
         />
         <span class="modal__circl modal__milkShake"></span>
       </li>
