--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -4,7 +4,7 @@ body {
   font-family: $main-ff;
   // background-color: $main-bg-color;
 
-  background: url(../images/iceCreamBG1.jpg) repeat center center fixed;
+  background: url(../images/iceCreamBG1.jpg) repeat-y center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
