--- a/src/sass/_extras.scss
+++ b/src/sass/_extras.scss
@@ -15,6 +15,13 @@
   border: 2px solid $black-text-color;
 
   animation: extras__scroll-to-top 1s linear infinite both;
+  transition: color $timing-function $duratoin,
+    background $timing-function $duratoin;
+
+  &:hover {
+    color: $white-text-color;
+    background: $hover-green-color;
+  }
 }
 
 @keyframes extras__scroll-to-top {
@@ -63,5 +70,71 @@
   }
   100% {
     background: hsla(294, 100%, 60%, 0.5);
+  }
+}
+
+.side-dotted-menu {
+  position: fixed;
+  right: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  gap: 35px;
+  font-size: 14px;
+  font-family: $secondary-ff;
+
+  white-space: pre-wrap;
+
+  word-break: normal;
+  word-wrap: normal;
+  overflow-wrap: normal;
+
+  line-height: 1.5;
+
+  color: $black-text-color;
+
+  &__item {
+    width: 25px;
+    height: 25px;
+    border: 2px solid $black-text-color;
+    background-color: $accent-color;
+    border-radius: 50%;
+
+    animation: extras__scroll-to-top 1s linear infinite both;
+
+    transition: width 400ms ease-out;
+
+    // font-size 200ms ease-in-out,
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    & > p {
+      // transform: translateX(50%);
+      white-space: nowrap;
+      opacity: 0;
+      transform: scale(0);
+
+      transition: opacity 400ms ease-out 200ms, background 400ms ease-out;
+    }
+
+    &:hover {
+      & > p {
+        transform: scale(1);
+        color: $white-text-color;
+
+        opacity: 1;
+      }
+      background: $hover-green-color;
+      border-radius: 10px 100px / 120px;
+      padding: 10px;
+      width: 100%;
+      height: 25px;
+      max-height: 50px;
+      font-size: 16px;
+    }
   }
 }
