--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -11,6 +11,10 @@ body {
   background-size: cover;
 }
 
+html {
+  scroll-behavior: smooth
+}
+
 .container {
   width: 100%;
   padding-left: 20px;
