--- a/src/sass/_common.scss
+++ b/src/sass/_common.scss
@@ -1,5 +1,7 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-
+html {
+  scroll-behavior: smooth
+}
 body {
   font-family: $main-ff;
   background-color: $main-bg-color;
