--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -62,8 +62,12 @@
         data-modal-open
       >
         Buy now
-        <svg class="btn-icon" width="12px" height="12px">
-          <use href="./images/symbol-defs.svg#icon-btn-greater-than"></use>
+        <svg
+          class="icon-btn-after icon-btn-after--marg"
+          width="12px"
+          height="12px"
+        >
+          <use href="./images/header/icon.svg#icon-btn-after"></use>
         </svg>
       </button>
     </div>
