--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -119,3 +119,14 @@
     display: none;
   }
 }
+
+.icon-btn-after {
+  stroke: currentColor;
+
+  &:focus {
+    stroke: currentColor;
+  }
+}
+.icon-btn-after--marg {
+  margin-left: 7px;
+}
