--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,4 +1,4 @@
-<section class="about section">
+<section class="about section" id="about">
   <div class="container">
     <p class="about-pre-title">tradition and love</p>
     <h2 id=about class="about-title">how it<span>&#39</span>s made?</h2>
