--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -1,4 +1,4 @@
-<section class="section contacts">
+<section class="section contacts" id="contacts">
   <div class="container">
     <h2 class="visually-hidden">Contacts</h2>
     <ul class="contacts__list list">
