--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -40,13 +40,13 @@
           <a href="./index.html" class="link">Home</a>
         </li>
         <li class="item">
-          <a href="" class="link">How it’s made?</a>
+          <a href="#about" class="link">How it’s made?</a>
         </li>
         <li class="item">
-          <a href="" class="link">Our products</a>
+          <a href="#products" class="link">Our products</a>
         </li>
         <li class="item">
-          <a href="" class="link">Contact</a>
+          <a href="#contacts" class="link">Contact</a>
         </li>
       </ul>
     </nav>
