add button; adapted

--- a/src/sass/_about.scss
+++ b/src/sass/_about.scss
@@ -26,6 +26,7 @@
   color: $white-text-color;
   margin-bottom: 32px;
   @include tablet {
+    white-space: nowrap;
     max-width: 454px;
     font-size: 34px;
     letter-spacing: 0.06em;
@@ -42,6 +43,9 @@
   @include tablet {
     display: flex;
     gap: 32px;
+  }
+  @include desktop {
+    gap: 100px;
   }
 }
 .about-picture {
@@ -60,17 +64,19 @@
   background-repeat: no-repeat;
   margin-bottom: 62px;
   @include tablet {
-    max-width: 334px;
-    height: 334px;
+    min-width: 334px;
+    min-height: 334px;
     margin-bottom: 0;
-    @include desktop {
-      width: 500px;
-      height: 500px;
-    }
+  }
+  @include desktop {
+    min-width: 500px;
+    min-height: 500px;
   }
 }
 .about-cow {
   position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   transform: translateY(22px);
   @include tablet {
@@ -80,13 +86,27 @@
     transform: translateY(39px);
   }
 }
-.abot-text-container {
-  max-width: 334px;
+.about-img {
+  width: 100%;
+}
+.about-text-container {
+  @include tablet {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    max-width: 334px;
+  }
+  @include desktop {
+    max-width: 463px;
+  }
 }
 .about-item {
   @include font(400, 12px, 1.75, 0.04em);
   text-align: center;
   color: $white-text-color;
+  @include tablet {
+    text-align: left;
+  }
   @include desktop {
     font-size: 16px;
   }
@@ -101,6 +121,7 @@
   display: none;
   @include tablet {
     display: block;
+    margin-bottom: 48px;
   }
 }
 .about-button {
@@ -110,6 +131,10 @@
   margin-right: auto;
   gap: 5px;
   stroke: currentColor;
+  @include tablet {
+    margin-bottom: 0;
+    margin-left: 0;
+  }
 }
 .about-more {
   stroke: currentColor;
