update-mob-menu

--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -59,7 +59,11 @@
       </ul>
     </nav>
     <div class="mob-menu-btn">
-      <button type="button" class="button main-button buy-now-btn" data-modal>
+      <button
+        type="button"
+        class="main-button main-button--none js-open-modal"
+        data-modal="1"
+      >
         Buy now
         <svg
           class="icon-btn-after icon-btn-after--marg"
