--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -58,8 +58,8 @@
     <div class="mob-menu-btn">
       <button
         type="button"
-        class="button main-button buy-now-btn"
-        data-modal-open
+        class="button main-button main-button--none js-open-modal"
+        data-modal="1"
       >
         Buy now
         <svg
