--- a/src/sass/_mobile-menu.scss
+++ b/src/sass/_mobile-menu.scss
@@ -57,7 +57,7 @@
 .mob-menu {
   position: fixed;
   background-color: $mob-menu-bg-color;
-  z-index: 1;
+  z-index: 100;
   top: 0;
   left: 0;
   width: 100%;
@@ -114,7 +114,7 @@
   transition: transform $duratoin $timing-function;
 }
 
-.buy-now-btn {
+.main-button--none {
   @include tablet {
     display: none;
   }
