--- a/src/sass/_extras.scss
+++ b/src/sass/_extras.scss
@@ -18,13 +18,18 @@
 
   animation: extras__scroll-to-top 1s linear infinite both;
 
-  transition: color $timing-function $duratoin,
-    background $timing-function $duratoin;
+  transition: all $timing-function $duratoin;
+
+  // background $timing-function $duratoin;
 
   &:hover {
     color: $white-text-color;
     background: $hover-green-color;
+  }
 
+  &.active {
+    opacity: 1;
+    visibility: visible;
   }
 }
 
@@ -100,16 +105,27 @@
 
   color: $black-text-color;
 
+  opacity: 0;
+  visibility: hidden;
+
+  transition: all $timing-function $duratoin;
+
+  &.active {
+    opacity: 1;
+    visibility: visible;
+  }
+
   &__item {
     width: 25px;
     height: 25px;
     border: 2px solid $black-text-color;
     background-color: $accent-color;
-    border-radius: 50%;
+    border-radius: 50px;
 
     animation: extras__scroll-to-top 1s linear infinite both;
 
-    transition: width 400ms ease-out;
+    transition: width 400ms ease-out, background-color 400ms ease-out,
+      height 400ms ease-out, border-radius 1000ms ease-out;
 
     // font-size 200ms ease-in-out,
     display: flex;
@@ -132,11 +148,12 @@
 
         opacity: 1;
       }
-      background: $hover-green-color;
+      background-color: $hover-green-color;
+
       border-radius: 10px 100px / 120px;
       padding: 10px;
       width: 100%;
-      height: 25px;
+      height: 35px;
       max-height: 50px;
       font-size: 16px;
     }
