--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,7 +1,7 @@
 <section class="about section" id="about">
   <div class="container">
     <p class="about-pre-title">tradition and love</p>
-    <h2 id="about" class="about-title">how it<span>&#39;</span>s made?</h2>
+    <h2 class="about-title">how it's made?</h2>
     <div class="about-content">
       <div class="about-picture">
         <div class="about-cow">
