--- a/src/partials/extras.html
+++ b/src/partials/extras.html
@@ -1,7 +1,5 @@
 <div class="side-dotted-menu">
-  <button class="side-dotted-menu__item"><p>How it’s made?</p></button
-  ><button class="side-dotted-menu__item"><p>Our products</p></button
-  ><button class="side-dotted-menu__item"><p>Contact</p></button>
-  <!-- <button class="side-dotted-menu__item"><p>dsfsdfsdf</p></button
-  ><button class="side-dotted-menu__item"><p>sdfsdf</p></button> -->
+  <a href="#about" class="side-dotted-menu__item"><p>How it’s made?</p></a
+  ><a href="#products" class="side-dotted-menu__item"><p>Our products</p></a
+  ><a href="#contacts" class="side-dotted-menu__item"><p>Contact</p></a>
 </div>
