--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -97,6 +97,8 @@
       </div>
       <!-- If we need pagination -->
       <div class="swiper-pagination"></div>
+      <div class="keyboard"></div>
+      <div class="mousewheel"></div>
     </div>
   </div>
 </section>
