contacts buttons and flex

--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -26,16 +26,16 @@
             </li>
           </ul>
         </div>
-        <ul class="contacts__links">
+        <ul class="contacts__links list">
           <li>
             <a href="tel:+610383766284" class="contacts__tel link"
-            >+61(0) 383 766 284
-          </a>
+              >+61(0) 383 766 284
+            </a>
           </li>
           <li>
             <a href="mailto:noreply@envato.com" class="contacts__mail link"
-            >noreply@envato.com
-          </a>
+              >noreply@envato.com
+            </a>
           </li>
         </ul>
       </li>
@@ -63,16 +63,16 @@
             </li>
           </ul>
         </div>
-       <ul class="contacts__links">
+        <ul class="contacts__links list">
           <li>
             <a href="tel:+610383766284" class="contacts__tel link"
-            >+61(0) 383 766 284
-          </a>
+              >+61(0) 383 766 284
+            </a>
           </li>
           <li>
             <a href="mailto:noreply@envato.com" class="contacts__mail link"
-            >noreply@envato.com
-          </a>
+              >noreply@envato.com
+            </a>
           </li>
         </ul>
       </li>
@@ -100,28 +100,28 @@
             </li>
           </ul>
         </div>
-        <ul class="contacts__links">
+        <ul class="contacts__links list">
           <li>
             <a href="tel:+610383766284" class="contacts__tel link"
-            >+61(0) 383 766 284
-          </a>
+              >+61(0) 383 766 284
+            </a>
           </li>
           <li>
             <a href="mailto:noreply@envato.com" class="contacts__mail link"
-            >noreply@envato.com
-          </a>
+              >noreply@envato.com
+            </a>
           </li>
         </ul>
       </li>
     </ul>
     <div class="contacts__buttons">
-      <button type="button" class="main-button">
+      <button type="button" class="js-open-modal main-button" data-modal="3">
         Our Locations
         <svg class="contacts__svg" width="12" height="12">
           <use href="./images/symbol-defs.svg#icon-more"></use>
         </svg>
       </button>
-      <button type="button" class="franch-button">
+      <button type="button" class="js-open-modal franch-button" data-modal="4">
         Franchise
         <svg class="contacts__svg" width="12" height="12">
           <use href="./images/symbol-defs.svg#icon-more"></use>
