--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -1,8 +1,17 @@
 .contacts {
 .contacts__list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    margin-bottom: 32px;
     @include tablet {
-        display: flex;
+        flex-direction: row;
+        gap: 16px;
         margin-bottom: 60px;
+    }
+    @include desktop {
+        gap: 32px;
+        margin-bottom: 64px;
     }
 }
 
@@ -14,27 +23,16 @@
     background-color: $white-text-color;
     box-shadow: 0px 8px 30px rgba(212, 20, 67, 0.1);
     border-radius: 24px;
-    margin-bottom: 20px;
-    &:last-child {
-        margin-bottom: 32px;
-        @include tablet {
-            margin-bottom: 0;
-        }
-    }
+    width: calc(100% - 20px);
     @include tablet {
-        margin-bottom: 0;
-        margin-right: 16px;
         padding-left: 24px;
         padding-right: 24px;
-        &:last-child {
-            margin-right: 0;
-        }
+        width: calc((100% - 16px * 2) / 3);
     }
     @include desktop {
-        margin-right: 32px;
-        &:last-child {
-            margin-right: 0;
-        }
+        padding-left: 40px;
+        padding-right: 40px;
+        width: calc((100% - 32px * 2) / 3);
     }
 }
 
