--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -89,8 +89,7 @@
           </picture>
           <p class="slide-coment">
             I love visiting your cafe. You prepare the most delicious ice cream
-            in Los Angeles! In addition, you have beautiful serving, cozy
-            atmosphere and polite staff.
+            in Los Angeles! In addition, cozy atmosphere and polite staff.
           </p>
           <p class="slide-name">Emily, Los Angeles</p>
         </div>
