--- a/src/sass/_contacts.scss
+++ b/src/sass/_contacts.scss
@@ -153,18 +153,16 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 16px;
     @include tablet {
         flex-direction: row;
         justify-content: center;
     }
 }
 
-.contacts__buttons .main-button {
-    margin-bottom: 16px;
-    @include tablet {
-        margin-bottom: 0;
-        margin-right: 16px;
-    }
+.contacts__svg {
+    stroke: currentColor;
+    margin-left: 6px;
 }
 
 .list {
